@@ -15,40 +15,60 @@ SLOT="0"
 KEYWORDS="~amd64"
 IUSE="blas doc mpi static-libs"
 
-RDEPEND="blas? ( virtual/blas )
-	mpi? ( virtual/mpi )
+RDEPEND="blas? ( virtual/cblas )
+	mpi? ( virtual/mpi[cxx] )
 	>=dev-libs/boost-1.39"
 DEPEND="${RDEPEND}
 	doc? ( app-doc/doxygen )"
 
+add_config() {
+	echo $@ >> GentooConfig
+}
+
+my_usex() {
+	usex $1 $2 $2 $3 $4 >> GentooConfig
+}
+
 src_configure() {
-	echo 'VERSION="release"' > GentooConfig
-	echo "CXX=$(tc-getCXX)" >> GentooConfig
-	echo 'LIBRARY_DIRECTIVES="-Wl,-soname,libblaze.so.0"' >> GentooConfig
-	usex static-libs 'LIBRARY="both"' 'LIBRARY="shared"' >> GentooConfig
-	usex blas 'BLAS="yes"' 'BLAS="no"' >> GentooConfig
-	usex mpi 'MPI="yes"' 'MPI="no"' >> GentooConfig
+	add_config 'VERSION="release"'
+	add_config "CXX=$(tc-getCXX)"
+	EXTRA_LDFLAGS="-Wl,-soname,libblaze.so"
+	my_usex static-libs LIBRARY= both shared
+	if use blas ; then
+		add_config 'BLAS=yes'
+		add_config 'BLAS_INCLUDE_FILE=cblas.h'
+	else
+		add_config 'BLAS=no'
+	fi
+	if use mpi ; then
+		add_config 'MPI=yes'
+		EXTRA_LDFLAGS="${EXTRA_LDFLAGS} $(mpic++ --showme:link)"
+	else
+		add_config 'MPI=no'
+	fi
+	add_config "LIBRARY_DIRECTIVES=\"${EXTRA_LDFLAGS}\""
 
 	./configure GentooConfig || die
 }
 
 src_compile() {
 	default
-	use doc && doxygen
+	use doc && (doxygen || die)
 }
 
 src_test() {
 	pushd blazetest
-	echo "CXX=$(tc-getCXX)" > GentooConfig
-	usex blas 'BLAS="yes"' 'BLAS="no"' >> GentooConfig
-	./configure GentooConfig || die
+	./configure ../GentooConfig || die
 	emake
-	./run || die
+	LD_LIBRARY_PATH="${S}/lib" ./run || die
 	popd
 }
 
 src_install() {
 	dolib.so lib/libblaze.so
-	dosym libblaze.so /usr/lib/libblaze.so.0
 	use static-libs && dolib.a lib/libblaze.a
+	insinto /usr/include
+	doins -r blaze
+
+	use doc && dodoc -r doc/*
 }
